--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_svg: ^0.22.0
   smooth_page_indicator: any
+  share_plus: ^3.0.4
 
 dev_dependencies:
   flutter_test:
